--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-	    <div id="app"></div>
+	    <main id="app"></main>
 	    <script src="/dist/nupjook.bundle.js"></script>
 	</body>
 </html>
