--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- FIXME uncomment stylesheet below here
+			TODO add fonts
 		<link rel="stylesheet" href="/dist/nupjook.bundle.css">-->
 		<title>Nupjook's Real Estate</title>
 	</head>
