--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!-- FIXME uncomment stylesheet below here
-			TODO add fonts
-		<link rel="stylesheet" href="/dist/nupjook.bundle.css">-->
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,200,300,400,500,600,700,800,900|Noto+Sans+KR:100,300,400,500,700,900&display=swap" rel="stylesheet">
+		<link href="/fonts/iosevka/webfont.css" rel="stylesheet">
+		<link href="/fonts/museca/stylesheet.css" rel="stylesheet">
+		<link href="/dist/nupjook.bundle.css" rel="stylesheet">
 		<title>Nupjook's Real Estate</title>
 	</head>
 
